--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -8,6 +8,7 @@
 	@include desktop {
 		align-self: flex-end;
 		margin: 0 auto;
+		margin-top: 50px;
 	}
 	background: linear-gradient(to top, $first-color, $second-color);
 	border: 0px solid;
